<resources>
    <string name="app_name">Android-TP</string>

    <string name="exercice1">Exercice 1</string>
    <string name="exercice2">Exercice 2</string>
    <string name="exercice3">Exercice 3</string>
    <string name="exercice4">Exercice 4</string>
    <string name="exercice5">Exercice 5</string>

    <!-- Exercice 1 -->
    <string name="ex1_title">Ecrire votre prénom et valider</string>
    <string name="ex1_ipt">Prénom</string>
    <string name="ex1_btn">VALIDER</string>
    <string name="ex1_txt">Hello world !</string>

    <!-- Exercice 2 -->
    <string name="ex2_ques">"Quelle a été la différence de buts lors du match de football opposant l'équipe enseignante de département à l'équipe étudiante ?"</string>
    <string name="ex2_r1">+10 pour les enseignants</string>
    <string name="ex2_r2">0 Match nul</string>
    <string name="ex2_r3">+1 pour les étudiants</string>
    <string name="ex2_btn">VALIDER MA RÉPONSE</string>
    <string name="ex2_tooltip">Choisir une réponse puis valider</string>

    <!-- Exercice 3 -->
    <string name="ex3_hand_ia">"Main de l'ordinateur"</string>
    <string name="ex3_hand_pl">Choisir une main</string>
    <string name="ex3_wait">En attente</string>
    <string name="ex3_win">Victoire !</string>
    <string name="ex3_loose">Defaite !</string>
    <string name="ex3_tie">Égalité !</string>
    <string name="ex3_nb_win">Nombre de victoires : %1$d</string>
    <string name="ex3_nb_loose">Nombre de défaites : %1$d</string>
    <string name="ex3_nb_tie">"Nombre d'égalités : %1$d"</string>

    <!-- Exercice 4 -->
    <!-- Main -->
    <string name="ex4_main_txt">Ecris ton prénom</string>
    <string name="ex4_main_ipt">Prénom</string>
    <string name="ex4_main_btn">VALIDER</string>
    <!-- Hello -->
    <string name="ex4_hello_txt">Hello %1$s !!!</string>
    <string name="ex4_hello_pre">CHANGER DE PRÉNOM</string>
    <string name="ex4_hello_ex">CHOISIR UN AUTRE EXERCICE</string>

    <!-- Exercice 5 -->
    <!-- Main -->
    <string name="ex5_main_txt">Choisis ta table de multiplication</string>
    <string name="ex5_main_btn">VALIDER</string>
    <!-- TableMultiplication -->
    <string name="ex5_table_calc">%1$d x %2$d = </string>
    <string name="ex5_table_hint">"?"</string>
    <string name="ex5_table_btn">VALIDER</string>
    <!-- Erreur -->
    <string name="ex5_err_txt">ERREUR(S) !!</string>
    <string name="ex5_err_sub">"Nombre d'erreurs : %1$d"</string>
    <string name="ex5_err_corr">CORRIGER MES RÉPONSES</string>
    <string name="ex5_err_sel">CHOISIR UNE AUTRE TABLE</string>
    <!-- Felicitation -->
    <string name="ex5_win_txt">FELICITATIONS !!</string>
    <string name="ex5_win_tab">CHOISIR UNE AUTRE TABLE</string>
    <string name="ex5_win_exo">CHOISIR UN AUTRE EXERCICE</string>
</resources>