<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Exercice4Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:text="@string/ex4_main_txt" />

    <EditText
        android:id="@+id/exercice4_ipt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/ex4_main_ipt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex4_main_btn"
        android:onClick="valider" />

</LinearLayout>