<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Exercice3Activity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex3_hand_ia"
            android:textSize="20dp" />


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/exercice3_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex3_wait"
            android:textColor="@color/red"
            android:textSize="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex3_hand_pl"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:onClick="exercice3play"
                app:srcCompat="@drawable/pierre" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:onClick="exercice3play"
                app:srcCompat="@drawable/ciseaux" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:onClick="exercice3play"
                app:srcCompat="@drawable/feuille" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="bottom|left" >
        <TextView
            android:id="@+id/exercice3_win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex3_nb_win" />
        <TextView
            android:id="@+id/exercice3_loose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex3_nb_loose" />
        <TextView
            android:id="@+id/exercice3_tie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex3_nb_tie" />
    </LinearLayout>
</LinearLayout>